--- a/index.html
+++ b/index.html
@@ -41,33 +41,38 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<div style="font-family:Aller; font-size:92px;"><span style="color:lime">&middot;</span>pattr</div>
+					<img class="plain" src="img/pattr-logo.png">
 					<p>Truly private instant messaging.</p>
 				</section>
 
 				<section>
 					<h2>Follow along</h2>
-					<img src="img/follow-along.jpg">
-					<p>https://justinpotts.github.com/pattr-101/index.html<p>
+					<img src="img/follow-along.png">
+					<p>http://bit.ly/pattr-talk-101<p>
 				</section>
 
 				<section>
 					<h2>Who are we?</h2>
-					<p>
-						Co-founders Alez Meza (CEO) and Justin Potts (CTO)
-					</p>
+						<p><img src="img/alex.jpg" width=144px height=144px> <img src="img/justin.jpg" width=144px height=144px></p>
+						<p>Co-founders Alez Meza (CEO) and Justin Potts (CTO)</p>
 				</section>
 
 				<!-- Example of nested vertical slides -->
 				<section>
 						<h2>Our mission</h2>
-						<p>Mission text here.</p>
+						<blockquote>
+							Pattr believes in fostering an open web, with maximum security and
+							privacy for its users. We do this by providing an easy to use tool
+							for groups to have untracked and encrypted conversations on the web.
+						</blockquote>
 				</section>
 
 				<section>
 					<h2>What's our tech stack?</h2>
 					<p>
-						Put icons of things we use here (Flask, Socket.io, and PureCSS)
+						<img src="img/flask.png" width=72px height=72px>
+						<img src="img/socketio.png" width=72px height=72px>
+						<img src="img/purecss.png" width=72px height=72px>
 					</p>
 				</section>
 
@@ -112,12 +117,45 @@
 
 				<section>
 					<h2>It's code time!</h2>
+				</section>
+
+				<section>
+					<h2>Lists</h2>
 					<pre><code class="python" data-trim>
-						print 'Hello world!'
+session['uid'] = generate_id()
+session['nick'] = generate_nick()
+session['room'] = roomcode
 					</code></pre>
 				</section>
 
-				<section style="text-align: left;">
+				<section>
+					<h2>Hashmaps</h2>
+					<pre><code class="python" data-trim>
+connected_users = {}
+connected_users[session['room']] = {session['uid']: session['nick']}
+					</code></pre>
+				</section>
+
+				<section>
+					<h2>Exceptions</h2>
+					<pre><code class="python" data-trim>
+try:
+	connected_users[session['room']][session['uid']] = session['nick']
+except KeyError:
+	connected_users[session['room']] = {session['uid']: session['nick']}
+					</code></pre>
+				</section>
+
+				<section>
+					<h2>Searching</h2>
+					<pre><code class="python" data-trim>
+for item in connected_users[session['room']]:
+	if connected_users[session['room']][item] == data[1]:
+		target_uid = item
+					</code></pre>
+				</section>
+
+				<section style="text-align: left;" data-background="img/end.gif">
 					<h1>THE END</h1>
 					<p>
 						- <a href="https://pattr.me">Visit Pattr</a> <br>
