Update mission statement

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 				<section>
 						<h2>Our mission</h2>
 						<blockquote>
-							Pattr believes in fostering an open web, with maximum security and
-							privacy for its users. We do this by providing an easy to use tool
-							for groups to have untracked and encrypted conversations on the web.
+							Pattr believes in fostering an open web, with maximum security and privacy for its users.
+          		We do this by providing a secure experience on the web for users to communicate quickly,
+          		privately, and securely.
 						</blockquote>
 				</section>
 
