Add automated tests and CI slides

--- a/index.html
+++ b/index.html
@@ -152,6 +152,32 @@ for item in connected_users[session['room']]:
 					</code></pre>
 				</section>
 
+				<section>
+					<h2><a href="https://github.com/justinpotts/pattr">View source</a></h2>
+				</section>
+
+				<section>
+					<h2>Automated Tests</h2>
+					<p>Wait, what?</p>
+				</section>
+
+				<section>
+					<h2>Automated Tests</h2>
+					<p class="fragment">
+						Continous Integration with Travis
+					</p>
+					<p class="fragment">
+						Checks for site usability
+					</p>
+					<p class="fragment">
+						Review PRs quicker and easier
+					</p>
+				</section>
+
+				<section>
+					<h2>To recap...</h2>
+				</section>
+
 				<section style="text-align: left;" data-background="img/end.gif">
 					<h1>THE END</h1>
 					<p>
